# compare_UQ

./: .gitignore  CITATION.cff  README.md
neuralnetwork/C/: README.md  plot_uncertainties.ipynb  requirements.txt  settings.json  settings0.json
neuralnetwork/C/bootstrap/: README.md  accuracy_energies.py  bootstrap_archive_saved_models.py  bootstrap_generate_configs.py  bootstrap_install_model.py  bootstrap_install_uninstall_model.py  bootstrap_single_set.py  bootstrap_submit_job.py  bootstrap_target_qoi.py  energyvslatconst_dft_data.txt  ensemble_loss.py  ensemble_loss.sh  lammps.in  log.lammps  run_uncertainty_propagations.py  run_uncertainty_propagations.sh  submit_job_bootstrap.sh  uncertainty_accuracy_energies.ipynb  uncertainty_accuracy_energies.py  uncertainty_accuracy_energy_forces.ipynb  uncertainty_accuracy_energy_forces.py  uncertainty_energy_vs_latconst.ipynb  uncertainty_energy_vs_latconst_diamond.ipynb  uncertainty_energy_vs_latconst_diamond.py  uncertainty_energy_vs_latconst_graphene.ipynb  uncertainty_energy_vs_latconst_graphene.py  uncertainty_energy_vs_latconst_graphite.ipynb  uncertainty_energy_vs_latconst_graphite.py  uncertainty_latconst_ecoh.ipynb  uncertainty_latconst_ecoh_diamond.ipynb  uncertainty_latconst_ecoh_diamond.py  uncertainty_latconst_ecoh_graphene.ipynb  uncertainty_latconst_ecoh_graphene.py  uncertainty_latconst_ecoh_graphite.ipynb  uncertainty_latconst_ecoh_graphite.py  uncertainty_phonon_dispersion.ipynb  (+14 more)
neuralnetwork/C/fim/: README.md  (+57 more)
neuralnetwork/C/training_dropout/mingjian_partition/DUNN_best_train/: CMakeLists.txt  NN.params
(+6302 files in other folders)
